# backend

./: 404.html  index.html  mkdocs.yml  package-lock.json  package.json  readme.md  requests.http  sitemap.xml
10_filas_rabbitmq/: index.html
documentation/: mkdocs.yml  pyproject.toml  readme.md
documentation/docs/: 10_filas_rabbitmq.md  11_tdd_testes_unitarios.md  12_deploy_render.md  13_autenticacao_criptografia_usuarios.md  15_avaliacao_semestral.md  1_analise_requisitos_viabilidade.md  2_gitflow_conventional_commits.md  3_virtualizacao_node_docker.md  4_modelagem_bd_models.md  5_rotas_controllers.md  6_atividade_avaliativa_individual.md  7_queries_sql_avancadas.md  8_helpers_camadas_auxiliares_mvc.md  index.md  tutorial_mvc.md
documentation/site/: 404.html  index.html  sitemap.xml
documentation/site/10_filas_rabbitmq/: index.html
documentation/site/11_tdd_testes_unitarios/: index.html
documentation/site/12_deploy_render/: index.html
documentation/site/13_autenticacao_criptografia_usuarios/: index.html
documentation/site/14_revisao_direcionamento_projetos/: index.html
documentation/site/15_avaliacao_semestral/: index.html
documentation/site/1_analise_requisitos_viabilidade/: index.html
documentation/site/2_gitflow_conventional_commits/: index.html
documentation/site/3_virtualizacao_node_docker/: index.html
documentation/site/4_modelagem_bd_models/: index.html
documentation/site/5_rotas_controllers/: index.html
documentation/site/6_atividade_avaliativa_individual/: index.html
documentation/site/7_queries_sql_avancadas/: index.html
(+59 files in other folders)
