[tool.poetry]
name = "backend"
version = "0.1.0"
description = "aulas de backend com node"
authors = ["afonsolelis <afonsolelis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
